# ddd-study

./: Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: main.py
src/domain/: food.py  ingredient.py  nutrient.py  nutrient_needs_profile.py  recipe.py  steps.py  unit.py
src/usecase/: interface.py
