[tool.poetry]
name = "ddd-study"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
isort = "^5.13.2"
black = "^24.2.0"
pyproject-flake8 = "^6.1.0"
pytest = "^8.0.1"
jupyterlab = "^3.5.0"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
ignore = "E203,"

[tool.pytest.ini_options]
testpaths = ["tests",]
